<resources>
    <array name="country">
        <item>Srilanka</item>
        <item>Canada</item>
        <item>America</item>
        <item>Russia</item>
        <item>India</item>
        <item>Italy</item>
        <item>Australia</item>
    </array>
    <array name="title">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Miss</item>
        <item>Rev</item>
    </array>
    <string name="app_name">Doc990</string>
    <string name="hos">Asiri Hospital Kandy</string>
    <string name="dr">Dr. Thilanka Seneviratne</string>
    <string name="sp">Special Notes</string>
    <string name="ses">Session Details</string>
    <string name="book">BOOK</string>
    <string name="act1">Active Appointments 5 </string>
    <string name="act2">Active Appointments 1 </string>
    <string name="act3">Active Appointments 0 </string>
    <string name="act4">Active Appointments 1 </string>
    <string name="act5">Active Appointments 1 </string>
    <string name="spe">Allergic Specialist</string>
    <string name="d1">August 30,2020 Sunday 4pm</string>
    <string name="d2">August 31,2020 Monnday 5pm</string>
    <string name="d3">September 03,2020 Sunday 4pm</string>

    <string name="d4">September 04,2020 Monday 5pm</string>
    <string name="d5">September 09,2020 Saturday 5pm</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="h1">About Us</string>

    <string name="namw">Dr.A. Fouzan</string>

    <string name="co">Country</string>
    <string name="na">Name</string>
    <string name="ph">Phone</string>
    <string name="nic">NIC</string>
    <string name="email">E-MAIL</string>
    <string name="submit">SUBMIT</string>

    <string-array name="titles">

        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
        <item>Mast.</item>
        <item>Dr</item>
        <item>Dr(Ms)</item>
        <item>Dr(Mrs)</item>
        <item>Prof</item>
        <item>Prof(Ms)</item>
        <item>Prof(Mrs)</item>
        <item>Rev</item>
        <item>Baby</item>
        <item>Sis</item>
        <item>Ms</item>
        <item>Hon</item>


    </string-array>

    <string-array name="countries">

        <item>Srilanka</item>
        <item>India</item>
        <item>Maldives</item>
        <item>Malaysia</item>
        <item>Dubai</item>
        <item>China</item>
        <item>England</item>
        <item>Australia</item>
        <item>Brazil</item>
        <item>Italy</item>
        <item>Qatar</item>
        <item>Russia</item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>Other</item>


    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Sign In</string>
    <string name="menu_slideshow">Sign Up</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="menu_myBookings">My Bookings</string>
    <string name="menu_refundRequest">Refund request</string>
    <string name="menu_ongoingNumber">Ongoing Number</string>
    <string name="menu_partners">partners</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_contactUs">Contact Us</string>
    <string name="menu_offers">Offers</string>c
    <string name="menu_termsConditions">Terms $ Conditions</string>
    <string name="menu_privacyPolicy">Privacy Policy</string>
    <string name="menu_faq">F.A.Q</string>

</resources>