<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_myBookings"
            android:icon="@drawable/booking"
            android:title="@string/menu_myBookings" />

        <item
            android:id="@+id/nav_refundRequest"
            android:icon="@drawable/refund"
            android:title="@string/menu_refundRequest" />

        <item
            android:id="@+id/nav_ongoingNumber"
            android:icon="@drawable/on"
            android:title="@string/menu_ongoingNumber" />

        <item
            android:id="@+id/nav_partners"
            android:icon="@drawable/partners"
            android:title="@string/menu_partners" />

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/about"
            android:title="@string/menu_aboutUs" />

        <item
            android:id="@+id/nav_contactUs"
            android:icon="@drawable/cont"
            android:title="@string/menu_contactUs" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/per"
            android:title="@string/menu_offers" />

        <item
            android:id="@+id/nav_termsConditions"
            android:icon="@drawable/term"
            android:title="@string/menu_termsConditions" />

        <item
            android:id="@+id/nav_privacypolicy"
            android:icon="@drawable/privacy"
            android:title="@string/menu_privacyPolicy" />

        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/qa"
            android:title="@string/menu_faq" />

    </group>
</menu>