<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="36dp"
                android:text="@string/hos"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="99dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/images" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="206dp"
                android:layout_height="35dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="-70dp"
                android:text="@string/dr"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="174dp"
                android:layout_height="32dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:text="@string/spe"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="171dp"
                android:layout_height="36dp"
                android:layout_marginStart="120dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:text="@string/sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="22dp"
                android:text="@string/ses"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginLeft="160dp"
            android:text="@string/act1" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="116dp"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-45dp"
            android:text="@string/d1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="75dp"
            android:layout_height="37dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-45dp"
            android:onClick="onClick"
            android:text="@string/book" />

        <View
            android:id="@+id/divider7"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="118dp"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/d2" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-43dp"
            android:text="@string/act2" />

        <Button
            android:id="@+id/button8"
            android:layout_width="75dp"
            android:layout_height="37dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-45dp"
            android:text="@string/book" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="118dp"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/d3" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="100dp"
            android:layout_height="43dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="-53dp"
            android:text="@string/act2" />

        <Button
            android:id="@+id/button9"
            android:layout_width="75dp"
            android:layout_height="37dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-45dp"
            android:text="@string/book" />

        <View
            android:id="@+id/divider9"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>


</LinearLayout>