<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="108dp"
                android:layout_height="75dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="35dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/images" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="200dp"
                android:layout_height="44dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="15dp"
                android:text="@string/namw"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="146dp"
                android:layout_height="31dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/co"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="342dp"
                android:layout_height="51dp"
                android:layout_marginTop="5dp"
                android:entries="@array/country"
                android:paddingLeft="40dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/na"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:entries="@array/title" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="-45dp"
                android:hint="Name Required" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/ph"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingClass">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="367dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:hint="Phone - Required" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="53dp">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="152dp"
                    android:layout_height="46dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:text="NIC"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="168dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="-48dp"
                    android:text="PASSPORT"
                    android:textStyle="bold" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/nic"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="390dp"
                android:layout_height="36dp"
                android:id="@+id/NIC"
                android:layout_marginLeft="20dp"
                android:hint="NIC"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="390dp"
                android:layout_height="36dp"
                android:id="@+id/Email_text"
                android:layout_marginLeft="20dp"
                android:hint="E-Mail"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                />

            <Button
                android:id="@+id/button2"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:text="@string/submit" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>